# mipX

./: .ycm_extra_conf.py  CMakeLists.txt  MIPX_TODO.txt  README.md
Apps/: CMakeLists.txt
example_002_Skeletonization/: CMakeLists.txt  example_002_Skeletonization.cpp
examples/: CMakeLists.txt  example_order.txt
examples/example_BasicVisualization/: CMakeLists.txt  example_BasicVisualization.cpp
examples/example_CurveDetectRisingSlopes/: CMakeLists.txt  example_CurveDetectRisingSlopes.cpp
examples/example_HistogramAsCurve/: CMakeLists.txt  example_HistogramAsCurve.cpp
examples/example_Skeletonization/: CMakeLists.txt  example_Skeletonization.cpp
examples_App/: CMakeLists.txt
examples_App/example_App_Graphs/: CMakeLists.txt  example_App_Graphs.cpp
examples_App/example_App_Histogram/: CMakeLists.txt  example_App_Histogram.cpp
examples_App/example_App_ImageAndSignalProcessing/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h  example_App_ImageAndSignalProcessing.cpp
examples_App/example_App_PWVPaPd/: CMakeLists.txt  example_App_PWVPaPd.cpp
examples_App/example_App_ParallelImageViewer/: CMakeLists.txt  example_App_ParallelImageViewer.cpp
examples_App/example_App_Skeleton/: CMakeLists.txt  example_App_Skeleton.cpp
examples_App/example_App_TableViewer/: CMakeLists.txt  example_App_TableViewer.cpp
examples_GUI/: CMakeLists.txt
examples_GUI/example_GUI_3DTrackballCameraViewer/: CMakeLists.txt  example_GUI_3DTrackballCameraViewer.cpp
examples_GUI/example_GUI_ImageViewer/: CMakeLists.txt  example_GUI_ImageViewer.cpp
examples_GUI/example_GUI_OrthogonalImageViewer/: CMakeLists.txt  example_GUI_OrthogonalImageViewer.cpp
examples_wasm/: CMakeLists.txt
mxCore/: CMakeLists.txt  Read Me.txt  mxArray.h  mxBasicImage.cpp  mxBasicImage.h  mxConnectedComponent3DStatic.cpp  mxConnectedComponent3DStatic.h  mxCurve.cpp  mxCurve.h  mxDataObject.cpp  mxDataObject.h  mxDataObjectFactory.h  mxDataObjectTree.cpp  mxDataObjectTree.h  mxFunctionObject.cpp  mxFunctionObject.h  mxFunctionObjectProgressIndicator.cpp  mxFunctionObjectProgressIndicator.h  mxGeometry.cpp  mxGeometry.h  mxGraph.cpp  mxGraph.h  mxImage.cpp  mxImage.h  mxImageSliceTag.cpp  mxImageSliceTag.h  mxIndex.cpp  mxIndex.h  mxList.h  mxMatrix.h  mxObject.cpp  mxObject.h  mxPoint.cpp  mxPoint.h  mxPointList.cpp  mxPointList.h  mxPosition.cpp  mxPosition.h  mxProfile.cpp  mxProfile.h  (+9 more)
mxImageProcessing/: CMakeLists.txt  mxBIP.cpp  mxBIP.h  mxBIPX.cpp  mxBIPX.h  mxGIP.cpp  mxGIP.h  mxGIPX.cpp  mxGIPX.h  mxSkeletonization.cpp  mxSkeletonization.h  mxSkeletonizationX.cpp  mxSkeletonizationX.h
mxProcessing/: CMakeLists.txt  mxBIP.cpp  mxBIP.h  mxCurveProcessing.cpp  mxCurveProcessing.h  mxGIP.cpp  mxGIP.h  mxGraphProcessing.cpp  mxGraphProcessing.h  mxProfileProcessing.cpp  mxProfileProcessing.h  mxSkeletonization.cpp  mxSkeletonization.h  mxVectorProcessing.cpp  mxVectorProcessing.h
mxStandard/: CMakeLists.txt  mxArray.h  mxFileOperations.h  mxList.h  mxList2.h  mxMatrix.h  mxRegularGrid.h  mxScopedPointer.h  mxString.cpp  mxString.h  mxString_backup_2019_10_13_over_pointer_NotWorking.cpp  mxString_backup_2019_10_13_over_pointer_NotWorking.h  mxTuple.h
test_vmxMenu/: CMakeLists.txt  Read Me.txt  test_vmxMenu.cpp
vmxApp/: CMakeLists.txt  mxDataContainer.cpp  mxDataContainer.h  mxFunctionConfig.cpp  mxFunctionConfig.h  vmxAppDataLoader.cpp  vmxAppDataLoader.h  vmxAppFunctionInterface.h  vmxAppFunctionWidget.cpp  vmxAppFunctionWidget.h  vmxAppHistogramViewer.cpp  vmxAppHistogramViewer.h  vmxAppImageViewer.cpp  vmxAppImageViewer.h  vmxAppOrthogonalImageViewer.cpp  vmxAppOrthogonalImageViewer.h  vmxAppProcessGraph.cpp  vmxAppProcessGraph.h  vmxAppProcessImage.cpp  vmxAppProcessImage.h  vmxAppProcessPointList.cpp  vmxAppProcessPointList.h  vmxAppProcessProfile.cpp  vmxAppProcessProfile.h  vmxAppProcessSkeleton.cpp  vmxAppProcessSkeleton.h  vmxAppReportWidget.cpp  vmxAppReportWidget.h  vmxAppSignalViewer.cpp  vmxAppSignalViewer.h  vmxAppSkeletonSliceViewer.cpp  vmxAppSkeletonSliceViewer.h  vmxAppTableViewer.cpp  vmxAppTableViewer.h  vmxAppWidget.cpp  vmxAppWidget.h
vmxAppCore/: CMakeLists.txt  mxDataContainer.cpp  mxDataContainer.h  mxFunctionConfig.cpp  mxFunctionConfig.h  vmxDataListWidget.cpp  vmxDataListWidget.h
vmxCore/: CMakeLists.txt  Read Me.txt  TODO.txt  vmxClipBoard.h  vmxCurve.cpp  vmxCurve.h  vmxGraph.cpp  vmxGraph.h  vmxImage.cpp  vmxImage.h  vmxImageData.cpp  vmxImageData.h  vmxImagePlaneWidget.cpp  vmxImagePlaneWidget.h  vmxImagePlanes.cpp  vmxImagePlanes.h  vmxInteractorStyleTrackballCamera.cpp  vmxInteractorStyleTrackballCamera.h  vmxMenu.cpp  vmxMenu.h  vmxMesh.cpp  vmxMesh.h  vmxPointList.cpp  vmxPointList.h  vmxProfile.cpp  vmxProfile.h  vmxRenderer.cpp  vmxRenderer.h  vmxSkeleton.cpp  vmxSkeleton.h  vmxTable.cpp  vmxTable.h  vmxTextInput.cpp  vmxTextInput.h  vmxVisualizer.cpp  vmxVisualizer.h  vmxVisualizerInteractorStyle.cpp  vmxVisualizerInteractorStyle.h
vmxGUI/: CMakeLists.txt  tinyfiledialogs.c  vmxButtonGroup.cpp  vmxButtonGroup.h  vmxClipBoard.h  vmxEventDetector.h  vmxFilesDialog.cpp  vmxFilesDialog.h  vmxGUIButtonGroup.cpp  vmxGUIButtonGroup.h  vmxGUIClipBoard.h  vmxGUIEventDetector.h  vmxGUIFilesDialog.cpp  vmxGUIFilesDialog.h  vmxGUIIconButtonGroup.cpp  vmxGUIIconButtonGroup.h  vmxGUIInputWidget.cpp  vmxGUIInputWidget.h  vmxGUIInteractorStyle.cpp  vmxGUIInteractorStyle.h  vmxGUIInteractorStyleImage.cpp  vmxGUIInteractorStyleImage.h  vmxGUIInteractorStyleTrackballCamera.cpp  vmxGUIInteractorStyleTrackballCamera.h  vmxGUILabel.cpp  vmxGUILabel.h  vmxGUIListWidget.cpp  vmxGUIListWidget.h  vmxGUIMainWidget.cpp  vmxGUIMainWidget.h  vmxGUIMenu.cpp  vmxGUIMenu.h  vmxGUIMenuBar.cpp  vmxGUIMenuBar.h  vmxGUIObject.cpp  vmxGUIObject.h  vmxGUIRenderer3DTrackballCamera.cpp  vmxGUIRenderer3DTrackballCamera.h  vmxGUIRendererImageViewer.cpp  vmxGUIRendererImageViewer.h  (+27 more)
xmxLoaderDicom/: CMakeLists.txt  xmxLoaderDicom.cpp  xmxLoaderDicom.h
xmxLoaderMatlab/: CMakeLists.txt  xmxLoaderMatlab.cpp  xmxLoaderMatlab.h
xmxLoaderNifti/: CMakeLists.txt  xmxLoaderNifti.cpp  xmxLoaderNifti.h
(+55 files in other folders)
